# trouble

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-data-release.yml  publish-pages.yml  publish.yml  run-tests.yml
docs/: index.html  page_one.html  page_one.md  page_two.html  page_two.md
docs/assets/js/core/: data_fetcher.js
docs/assets/js/one/: ui.js
docs/assets/js/one/templates/: content.mustache
docs/assets/js/zero/: ui.js
docs/assets/skins/: base_skin.js  default.js  shade.js  sun.js
docs/assets/skins/css/: sun.css
docs/one/: index.html
docs/zero/: index.html
tests/: __init__.py  test_daily_runner.py  test_etude_core.py  test_fetchers.py  test_release_manager.py
tests/e2e/: __init__.py  conftest.py  test_etude_rendering.py  test_skinning.py
trouble/: __init__.py  __main__.py  daily_runner.py  data.json  etude_core.py  fetchers.py  generator.py  log_config.py  mock_data_generator.py  release_manager.py
trouble/etudes/: __init__.py
trouble/etudes/one/: __init__.py  etude_impl.py
trouble/etudes/one/js_src/: ui.js
trouble/etudes/zero/: __init__.py  etude_impl.py
trouble/etudes/zero/js_src/: logger.js  ui.js
trouble/js_src/core/: data_fetcher.js  skin_manager.js  ui_updater.js
trouble/js_src/skins/: default.js  shade.js  sun.js
trouble/js_src/skins/css/: default.css  shade.css
trouble/templates/: .gitkeep  basic_page.html.template  basic_page.md.template  etude_generic_index.html.template  etude_zero_index.html.template  main_index.html.template
(+3 files in other folders)
