[tool.poetry]
name = "trouble-generator"
version = "0.1.0"
description = "Etude-based static site generator"
authors = ["N/A"]
readme = "README.md"
packages = [{include = "trouble"}]

[tool.poetry.dependencies]
python = ">=3.9"
# Dependencies will be added here by `poetry add`
requests = "^2.32.4"

[tool.poetry.scripts]
trouble = "trouble.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-playwright = "^0.7.0"
jsonschema = "^4.24.0"
faker = "^37.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
